--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -10,6 +10,26 @@ body {
     overflow-x: hidden;
 }
 
+body::-webkit-scrollbar {
+    width: 5px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: $glow;
+    height: 123px;
+
+
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background-color: $primary;
+    border-radius: 20px;
+}
+
+body::-webkit-scrollbar-track {
+    border-left: 1px solid $bg_body;
+}
+
 .btn_bg_green {
     background-color: transparent;
     color: #ffffff;
