--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,65 +1,96 @@
-@use './../../../node_modules/bootstrap/scss/bootstrap.scss';
+@use "./../../../node_modules/bootstrap/scss/bootstrap.scss";
 
 @use "./partials/_variables.scss" as *;
+@use "./partials/_navbar.scss" as *;
 @use "./partials/_about.scss";
+@use "./partials/_footer.scss" as *;
+
+body.light-mode {
+  background-color: $light;
+  color: $dark;
+  .nota {
+    background-color: $notalight;
+  }
+}
+
+body.dark-mode {
+  background-color: $dark;
+  color: $light;
+  .nota {
+    background-color: $notadark;
+  }
+}
 
 body {
-    background-color: $bg_body;
-    color: $light;
-    font-family: monospace;
-    overflow-x: hidden;
+  background-color: $bg_body;
+  color: $light;
+  font-family: monospace;
+  overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
-    width: 5px;
+  width: 5px;
 }
 
 body::-webkit-scrollbar-thumb {
-    background-color: $glow;
-    height: 123px;
-
-
+  background-color: $glow;
+  height: 123px;
 }
 
 body::-webkit-scrollbar-thumb:hover {
-    background-color: $primary;
-    border-radius: 20px;
+  background-color: $primary;
+  border-radius: 20px;
 }
 
 body::-webkit-scrollbar-track {
-    border-left: 1px solid $bg_body;
+  border-left: 1px solid $bg_body;
 }
 
-
-.cardlink{
-    background-color: $dark;
+.cardlink {
+  background-color: $dark;
 }
 
 .btn_bg_green {
-    background-color: transparent;
-    color: #ffffff;
-    border: none;
-    cursor: pointer;
-    overflow: hidden;
+  background-color: transparent;
+  color: #ffffff;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
 }
 
-.btn_link{
-    background-color: $btnlink;
-    font-weight: bold;
-    border: #ffffff63 solid 1px;
+.btn_link {
+  background-color: $btnlink;
+  font-weight: bold;
+  border: #ffffff63 solid 1px;
 }
 
-.btn_link:hover{
-    background-color: $glow;
-    color: $btnlink;
-    
+.btn_link:hover {
+  background-color: $glow;
+  color: $btnlink;
 }
 
 .btn_bg_green:hover {
-    color: $glow;
-    text-decoration: underline;
+  color: $glow;
+  text-decoration: underline;
 }
 
 .txt_glow {
-    color: $glow;
+  color: $glow;
+}
+
+.theme-button {
+  background-color: #34495e;
+  color: white;
+}
+.theme-button:hover {
+  background-color: #34495e;
+}
+.btn_blulight {
+  color: $dark;
+  background-color: $bludark;
+}
+
+.btn_blulight:hover {
+  color: $light;
+  background-color: $blulight;
 }
