--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -5,19 +5,71 @@
 @use "./partials/_about.scss";
 @use "./partials/_footer.scss" as *;
 
+
+/* LIGHT */
 body.light-mode {
   background-color: $light;
   color: $dark;
   .nota {
     background-color: $notalight;
   }
-}
+  body::-webkit-scrollbar-thumb {
+    background-color: $glowlight;
+    height: 123px;
+  }
+  .cardlink {
+    background-color: $glowdark;
 
+    .btn_link {
+      background-color: $light;
+      font-weight: bold;
+      border: $neutral solid 1px;
+    }
+
+    .btn_link:hover {
+      background-color: $glowlight;
+      color: $glowdark;
+    }
+    .btn_bg_green:hover {
+      color: $glowlight;
+      text-decoration: underline;
+    }
+  }
+  .txt_glow {
+    color: $glowlight;
+  }
+}
+/* DARK */
 body.dark-mode {
   background-color: $dark;
   color: $light;
   .nota {
     background-color: $notadark;
+  }
+  body::-webkit-scrollbar-thumb {
+    background-color: $glowdark;
+    height: 123px;
+  }
+  .cardlink {
+    background-color: $glowlight;
+
+    .btn_link {
+      background-color: $dark;
+      color: $glowdark;
+      font-weight: bold;
+      border: $neutral solid 1px;
+    }
+    .btn_link:hover {
+      background-color: $glowdark;
+      color: $btnlink;
+    }
+    .btn_bg_green:hover {
+      color: $glowdark;
+      text-decoration: underline;
+    }
+  }
+  .txt_glow {
+    color: $glowdark;
   }
 }
 
@@ -32,11 +84,6 @@ body::-webkit-scrollbar {
   width: 5px;
 }
 
-body::-webkit-scrollbar-thumb {
-  background-color: $glow;
-  height: 123px;
-}
-
 body::-webkit-scrollbar-thumb:hover {
   background-color: $primary;
   border-radius: 20px;
@@ -46,38 +93,6 @@ body::-webkit-scrollbar-track {
   border-left: 1px solid $bg_body;
 }
 
-.cardlink {
-  background-color: $dark;
-}
-
-.btn_bg_green {
-  background-color: transparent;
-  color: #ffffff;
-  border: none;
-  cursor: pointer;
-  overflow: hidden;
-}
-
-.btn_link {
-  background-color: $btnlink;
-  font-weight: bold;
-  border: #ffffff63 solid 1px;
-}
-
-.btn_link:hover {
-  background-color: $glow;
-  color: $btnlink;
-}
-
-.btn_bg_green:hover {
-  color: $glow;
-  text-decoration: underline;
-}
-
-.txt_glow {
-  color: $glow;
-}
-
 .theme-button {
   background-color: #34495e;
   color: white;
@@ -85,12 +100,5 @@ body::-webkit-scrollbar-track {
 .theme-button:hover {
   background-color: #34495e;
 }
-.btn_blulight {
-  color: $dark;
-  background-color: $bludark;
-}
 
-.btn_blulight:hover {
-  color: $light;
-  background-color: $blulight;
-}
+
