--- a/src/assets/scss/partials/_about.scss
+++ b/src/assets/scss/partials/_about.scss
@@ -1,6 +1,61 @@
 @use "./_variables.scss" as *;
 
-body.link-mode {
+body.light-mode {
+  #about {
+    color: $dark;
+    font-size: 25px;
+
+    .bg_intro {
+      padding: 2rem;
+
+      .txt_initial {
+        font-size: 50px;
+      }
+
+      .txt_fra {
+        color: $glowlight;
+        font-size: 50px;
+      }
+
+      .txt_thin {
+        font-size: 20px;
+        font-weight: bold;
+      }
+
+      .txt_swich {
+        color: $glowlight;
+        font-size: 40px;
+      }
+
+      a {
+        color: $glowlight;
+        text-decoration: none;
+      }
+
+      .introduce p {
+        font-size: larger;
+      }
+
+      .introduce p a {
+        color: white;
+        text-decoration-color: white;
+      }
+    }
+
+    .link_efct {
+      color: $glowlight;
+      text-decoration: none;
+      transition: color 2s, box-shadow 2s;
+      text-shadow: 0px 0px 30px $glowlight;
+    }
+
+    .link_efct:hover {
+      text-shadow: 0px 0px 10px $glowlight;
+    }
+  }
+}
+
+body.dark-mode {
   #about {
     color: $light;
     font-size: 25px;
@@ -55,14 +110,14 @@ body.link-mode {
   }
 }
 
-.circle {
+/* .circle {
   position: relative;
   width: 300px;
   height: 300px;
   border-radius: 100%;
   border: 5px solid transparent;
   overflow: hidden;
-
+  }
   .border_rotate_over1 {
     position: absolute;
     top: 0;
@@ -70,111 +125,27 @@ body.link-mode {
     height: 100%;
     border-radius: inherit;
     background: linear-gradient(
-      90deg,
-      transparent,
-      rgba(46, 204, 248, 0.7)
-    ); /* Aggiungi sfumatura */
-    animation: rotate 20s linear infinite, fade-out 5s ease forwards;
-  }
+    90deg,
+    transparent,
+    rgba(46, 204, 248, 0.7)
+  );
+  animation: rotate 20s linear infinite, fade-out 5s ease forwards;
+} */
 
-  @keyframes rotate {
+/* .bg_intro {
+  border-left: 3px solid transparent;
+  animation: border-left-appear 2s 1000ms forwards;
+  }
+  
+  @keyframes border-left-appear {
     from {
-      transform: rotate(0deg);
+      border-left-color: transparent;
     }
-
+    
     to {
-      transform: rotate(360deg);
-    }
-  }
-
-  .border_rotate_2 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-    border: 1px solid transparent;
-    border-top: 5px solid #080051;
-    animation: rotate 25s linear infinite, fade-out 5s ease forwards;
-  }
-
-  @keyframes rotate {
-    from {
-      transform: rotate(0deg);
-    }
-
-    to {
-      transform: rotate(360deg);
-    }
-  }
-
-  .border_rotate_3 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-    border: 1px solid transparent;
-    border-top: 5px solid #0699c29f;
-    animation: rotate 28s linear infinite, fade-out 5s ease forwards;
-  }
-
-  @keyframes rotate {
-    from {
-      transform: rotate(0deg);
-    }
-
-    to {
-      transform: rotate(360deg);
-    }
-  }
-
-  .border_rotate_4 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-    border: 1px solid transparent;
-    border-top: 5px solid $glowdark;
-    animation: rotate 10s linear infinite, fade-out 5s ease forwards;
-  }
-
-  @keyframes rotate {
-    from {
-      transform: rotate(0deg);
-    }
-
-    to {
-      transform: rotate(360deg);
-    }
-  }
-
-  .border_rotate_5 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-    border: 1px solid transparent;
-    border-top: 3px solid #0699c2;
-    animation: rotateAntiClockwise 5s linear infinite, fade-out 5s ease forwards;
-  }
-
-  @keyframes rotateAntiClockwise {
-    from {
-      transform: rotate(0deg);
-    }
-
-    to {
-      transform: rotate(-360deg);
-    }
-  }
-}
+      border-left-color: #ff6518;
+      }
+      } */
 
 .fade-in {
   opacity: 0;
@@ -190,18 +161,100 @@ body.link-mode {
     opacity: 1;
   }
 }
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
 
-/* .bg_intro {
-    border-left: 3px solid transparent;
-    animation: border-left-appear 2s 1000ms forwards;
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-@keyframes border-left-appear {
-    from {
-        border-left-color: transparent;
-    }
+.border_rotate_2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  border: 1px solid transparent;
+  border-top: 5px solid #080051;
+  animation: rotate 25s linear infinite, fade-out 5s ease forwards;
+}
 
-    to {
-        border-left-color: #ff6518;
-    }
-} */
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.border_rotate_3 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  border: 1px solid transparent;
+  border-top: 5px solid #0699c29f;
+  animation: rotate 28s linear infinite, fade-out 5s ease forwards;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.border_rotate_4 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  border: 1px solid transparent;
+  border-top: 5px solid $glowdark;
+  animation: rotate 10s linear infinite, fade-out 5s ease forwards;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.border_rotate_5 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  border: 1px solid transparent;
+  border-top: 3px solid #0699c2;
+  animation: rotateAntiClockwise 5s linear infinite, fade-out 5s ease forwards;
+}
+
+@keyframes rotateAntiClockwise {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(-360deg);
+  }
+}
