--- a/src/assets/scss/partials/_navbar.scss
+++ b/src/assets/scss/partials/_navbar.scss
@@ -25,9 +25,15 @@
     color: white;
     text-decoration: none;
     font-size: 1.2rem;
+    padding: 1rem;
+    transition: background-color 0.3s, color 0.3s;
   }
 
-  a:hover {
-    text-decoration: underline;
+  a:hover,
+  a:focus,
+  a:active {
+    color: #34495e;
+    background-color: #ffffff;
+    border-radius: 2px;
   }
 }
